<resources>
    <string name="app_name">Android复习手册</string>
    <string name="Text_question">你好，世界</string>
    <string name="Button_true">正确</string>
    <string name="Button_false">错误</string>
    <string name="Button_next">下一题</string>
    <string name="Button_answer">查看答案？</string>
    <string name="TextView_reset">重新复习</string>
    <string name="Answer_Text">您已查看了答案</string>
    <string name="About">联系开发者</string>
</resources>
