<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/Text_question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonStyle"
                android:text="@string/Button_true" />

            <Button
                android:id="@+id/button_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonStyle"
                android:text="@string/Button_false" />

        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_margin="28dp"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_next"
            android:text="@string/Button_next" />

        <Button
            android:id="@+id/button_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_answer" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>